# thread-pool

./: CMakeLists.txt  Makefile  README.md  main.cpp
include/: channel.h  gui.h  interfaces.h  logger.h  manager.h  queue.h  queue.impl.h  routines.h  task.h
src/: gui.cpp  logger.cpp  main.cpp  manager.cpp  routines.cpp  task.cpp
tests/: test_main.cpp  test_routines.cpp  test_taskmanager.cpp
